--- a/public/css/index.css
+++ b/public/css/index.css
@@ -78,25 +78,28 @@ float: right;
   
 }
 
+
 .task9 .item1 {
   height: 200px;
-  clear: ;
-  
+  float: left;
 }
 .task9 .item2 {
-  position: absolute;
-  top: 0;
-  right: 0;
+  float: right;
 }
 .task9 p {
-  
+  clear: right;
 }
 
 .task10 .item1 {
+  float: left;
 }
 .task10 .item2 {
+  float: right;
+  height: 200px;
 }
 .task10 p {
+  clear: left;
+  
 }
 
 .task11 .img-item {
@@ -151,9 +154,7 @@ float: right;
   height: 100%;
   width: 100%;
   object-fit: none;
-  position: absolute;
-  top: 25px;
-  left: 40px;
+  object-position: 40px 25px;
 }
 
 .task19 .img-item {
